--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="src/style.css" />
+    <link rel="stylesheet" href="style.css" />
     <script
       src="https://kit.fontawesome.com/64e9a66287.js"
       crossorigin="anonymous"
@@ -167,5 +167,5 @@
       </div>
     </div>
   </body>
-  <script src="src/index.js"></script>
+  <script src="index.js"></script>
 </html>
