Added GitHub repository link

--- a/index.html
+++ b/index.html
@@ -165,6 +165,15 @@
           Tokyo
         </button>
       </div>
+
+      <div class="credit">
+        <a
+          href="https://github.com/patricehlt/weather-app-patrice"
+          target="_blank"
+          >Open-source code</a
+        >
+        by Patrice Tan
+      </div>
     </div>
   </body>
   <script src="index.js"></script>
