--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="src/style.css" />
     <script
       src="https://kit.fontawesome.com/64e9a66287.js"
       crossorigin="anonymous"
@@ -33,12 +33,15 @@
       <p class="conditionstoday">
         Mostly cloudy
       </p>
+      <i id="icon" class="fas fa-cloud-sun"></i>
       <div class="row">
         <div class="col-6">
-          <i class="fas fa-cloud-sun"></i>
-          <br />
           <span id="todayTemp">
-            20°C
+            20
+          </span>
+          <span id="changeMetric">
+            <a href="#" id="celcius" class="active">°C</a> |
+            <a href="#" id="fahrenheit">°F</a>
           </span>
         </div>
         <div class="col-6 conditions">
@@ -53,12 +56,6 @@
           </div>
           <br />
         </div>
-      </div>
-
-      <div class="currentLocation">
-        <button type="button" class="btn btn-outline-light" id="geolocation">
-          📍Current Location
-        </button>
       </div>
 
       <form class="form-group" id="search-bar">
@@ -79,12 +76,9 @@
         />
       </form>
 
-      <div class="changeMetric">
-        <button type="button" class="btn btn-outline-light" id="celcius">
-          °C
-        </button>
-        <button type="button" class="btn btn-outline-light" id="fahrenheit">
-          °F
+      <div class="currentLocation">
+        <button type="button" class="btn btn-outline-light" id="geolocation">
+          📍Current Location
         </button>
       </div>
 
@@ -176,5 +170,5 @@
       </div>
     </div>
   </body>
-  <script src="index.js"></script>
+  <script src="src/index.js"></script>
 </html>
