--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="custom.css" />
     <script
       src="https://kit.fontawesome.com/64e9a66287.js"
       crossorigin="anonymous"
     ></script>
     <link
-      href="https://fonts.googleapis.com/css2?family=Elsie:wght@400;900&family=Quicksand:wght@300;400;500;600;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Elsie:wght@400;900&family=Quicksand:wght@300;400;500;600;700&display=Montserrat:wght@300;400;500&display=swap"
       rel="stylesheet"
     />
   </head>
@@ -63,6 +64,7 @@
             class="form-control"
             placeholder="Where would you rather be?"
             autocomplete="off"
+            autofocus="on"
             id="search-input"
           />
         </div>
